ingress/ingress-dirpath.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dirpath-ingress-example
spec:
  rules:
    - host: example-ingress.com
      http:
        paths:
          - path: /api1
            backend:
              serviceName: api1-service
              servicePort: 80
          - path: /api2
            backend:
              serviceName: api2-service
              servicePort: 80
